--- a/src/components/Business/AboutBusiness.css
+++ b/src/components/Business/AboutBusiness.css
@@ -1,202 +1,199 @@
-.AboutBusiness {
-	margin: 0 10px;
-}
-
 @media screen and (max-width: 500px) {
-	.AboutBusiness {
-		display: none;
-	}
+  .AboutBusiness {
+    display: none;
+  }
 }
-
+.AboutBusiness {
+  padding: 10px;
+}
 .wallpaper {
-	position: relative;
-	width: 100%;
-	height: 300px;
-	background-color: rgb(230, 230, 230);
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-color: rgb(230, 230, 230);
 }
 
 .avatar {
-	height: 260px;
-	width: 200px;
-	position: absolute;
-	left: 40%;
-	top: 65%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+  height: 260px;
+  width: 200px;
+  position: absolute;
+  left: 40%;
+  top: 65%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 912px) {
-	.avatar {
-		left: 38%;
-	}
-	.nav {
-		padding-top: 50px;
-	}
+  .avatar {
+    left: 38%;
+  }
+  .nav {
+    padding-top: 50px;
+  }
 }
 
 .actions {
-	height: fit-content;
-	width: fit-content;
-	display: flex;
-	justify-content: space-between;
-	margin: 0 80px 0 80px;
-	gap: 240px;
-	justify-content: center;
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 80px 0 80px;
+  gap: 160px;
+  justify-content: center;
 }
 .btn-nav {
-	width: fit-content;
-	display: flex;
+  display: flex;
 }
 .btn-like {
-	width: 210px;
-	display: flex;
-	justify-content: center;
-	margin-left: 110px;
+  width: 210px;
+  display: flex;
+  justify-content: center;
+  margin-left: 110px;
 }
 
 .btn-contact {
-	background-color: white;
-	color: black;
-	border: none;
-	font-size: 1em;
-	font-weight: bold;
-	height: 30px;
-	width: 100px;
-	border-radius: 10px;
-	margin-top: 18px;
-	margin-right: 10px;
+  background-color: white;
+  color: black;
+  border: none;
+  font-size: 1em;
+  font-weight: bold;
+  height: 30px;
+  width: 100px;
+  border-radius: 10px;
+  margin-top: 18px;
+  margin-right: 10px;
 }
 
 .btn-like button {
-	background-color: rgb(248, 168, 89);
-	color: white;
-	border: none;
-	font-size: 1em;
-	font-weight: bold;
-	height: 30px;
-	width: 100px;
-	border-radius: 10px;
-	margin-top: 16px;
+  background-color: rgb(248, 168, 89);
+  color: white;
+  border: none;
+  font-size: 1em;
+  font-weight: bold;
+  height: 30px;
+  width: 100px;
+  border-radius: 10px;
+  margin-top: 16px;
 }
 
 .btn-like button:hover {
-	background-color: rgb(55, 55, 55);
-	border: none;
-	color: white;
+  background-color: rgb(55, 55, 55);
+  border: none;
+  color: white;
 }
 
 .btn-nav button {
-	background-color: rgb(248, 168, 89);
-	color: white;
-	border: none;
-	font-size: 1em;
-	font-weight: bold;
-	height: 30px;
-	width: 100px;
-	border-radius: 10px;
-	margin-top: 16px;
+  background-color: rgb(248, 168, 89);
+  color: white;
+  border: none;
+  font-size: 1em;
+  font-weight: bold;
+  height: 30px;
+  width: 100px;
+  border-radius: 10px;
+  margin-top: 16px;
 }
 
 .btn-nav button:hover {
-	background-color: rgb(55, 55, 55);
-	border: none;
-	color: white;
+  background-color: rgb(55, 55, 55);
+  border: none;
+  color: white;
 }
 
 .img-avatar {
-	height: 180px;
-	width: 180px;
-	border: 1px solid rgb(197, 194, 194);
-	border-radius: 50%;
-	background-color: white;
-	margin-bottom: 10px;
+  height: 180px;
+  width: 180px;
+  border: 1px solid rgb(197, 194, 194);
+  border-radius: 50%;
+  background-color: white;
+  margin-bottom: 10px;
 }
 
 /* nav */
 .nav {
-	display: flex;
-	margin-bottom: 16px !important;
-	align-items: center;
+  display: flex;
+  margin-bottom: 16px !important;
+  align-items: center;
 }
 
 .subnav {
-	display: flex;
-	justify-content: space-around;
-	gap: 20px;
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
 }
 
 .subnav div {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: white;
-	color: black;
-	font-size: 1em;
-	font-weight: bold;
-	height: 30px;
-	width: auto;
-	border-radius: 10px;
-	padding: 10px 10px 10px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  color: black;
+  font-size: 1em;
+  font-weight: bold;
+  height: 30px;
+  width: auto;
+  border-radius: 10px;
+  padding: 10px 10px 10px 10px;
 }
 
 @media (max-width: 912px) {
-	.subnav div {
-		font-size: 0.8em;
-	}
+  .subnav div {
+    font-size: 0.8em;
+  }
 }
 
 .subnav div:hover {
-	background-color: rgb(248, 168, 89);
-	color: white;
+  background-color: rgb(248, 168, 89);
+  color: white;
 }
 
 .cart-main {
-	margin-left: auto;
-	background-color: white;
-	color: black;
-	font-size: 1em;
-	font-weight: bold;
-	height: 30px;
-	width: 140px;
-	border-radius: 10px;
-	display: flex;
-	gap: 10px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  margin-left: auto;
+  background-color: white;
+  color: black;
+  font-size: 1em;
+  font-weight: bold;
+  height: 30px;
+  width: 140px;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .cart-title {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: black;
-	background-color: white;
-	border-radius: 10px;
-	width: 80px;
-	height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  background-color: white;
+  border-radius: 10px;
+  width: 80px;
+  height: 30px;
 }
 .cart-title:hover {
-	color: white;
-	background-color: rgb(55, 55, 55);
-	border-radius: 10px;
+  color: white;
+  background-color: rgb(55, 55, 55);
+  border-radius: 10px;
 }
 
 .quantity {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-color: rgb(248, 168, 89);
-	border-radius: 50%;
-	width: 28px;
-	line-height: 30px;
-	color: white;
-	height: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(248, 168, 89);
+  border-radius: 50%;
+  width: 28px;
+  line-height: 30px;
+  color: white;
+  height: 28px;
 }
 
 /* nav */
 .nav {
-	margin-top: 140px;
-	margin-bottom: 20px;
+  margin-top: 140px;
+  margin-bottom: 20px;
 }
