--- a/src/layouts/Business/Cart.css
+++ b/src/layouts/Business/Cart.css
@@ -1,141 +1,141 @@
 * {
-	margin: 0;
-	box-sizing: border-box;
+  margin: 0;
+  box-sizing: border-box;
 }
 .cart {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 9999;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background-color: rgba(0, 0, 0, 0.55);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.55);
 }
 .cart-container {
-	background-color: white;
-	padding: 10px 10px;
-	width: 1000px;
-	height: 600px;
-	border: 1px solid #ccc;
-	border-radius: 10px;
-	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: white;
+  padding: 10px 10px;
+  width: 1000px;
+  height: auto;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .cart-box-body {
-	height: 100px;
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	margin: 0 10px 10px 10px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0 10px 10px 10px;
 }
 
 .cart-cart-items {
-	display: flex;
-	align-items: center;
-	border-bottom: 1px solid #ccc;
-	padding: 20px 10px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 20px 10px;
 
-	margin-right: 20px;
+  margin-right: 20px;
 }
 
 .cart-box-heading-info {
-	font-size: 25px;
-	font-weight: 600;
-	color: rgb(248, 168, 89);
-	margin-left: 15px;
-	margin-top: 15px;
+  font-size: 25px;
+  font-weight: 600;
+  color: rgb(248, 168, 89);
+  margin-left: 15px;
+  margin-top: 15px;
 }
 
 .cart-box-body-info-1 {
-	display: flex;
+  display: flex;
 }
 .cart-box-body-option {
-	margin: 10px;
-	display: flex;
+  margin: 10px;
+  display: flex;
 }
 .cart-checkbox {
-	height: 20px;
-	width: 20px;
+  height: 20px;
+  width: 20px;
 }
 .cart-box-body-input {
-	height: 19px;
-	width: 19px;
-	margin-top: 15px;
+  height: 19px;
+  width: 19px;
+  margin-top: 15px;
 }
 .cart-box-body-info {
-	display: flex;
-	gap: 20px;
-	margin-left: 20px;
+  display: flex;
+  gap: 20px;
+  margin-left: 20px;
 }
 .cart-box-body-square {
-	height: 60px;
-	width: 85px;
-	border: 1px solid;
-	margin-top: 5px;
-	border-radius: 10px;
+  height: 60px;
+  width: 85px;
+  border: 1px solid;
+  margin-top: 5px;
+  border-radius: 10px;
 }
 .cart-box-body-content {
-	line-height: 25px;
-	width: 130px;
+  line-height: 25px;
+  width: 130px;
 }
 .cart-content1 {
-	font-size: 18px;
-	font-weight: 600;
+  font-size: 18px;
+  font-weight: 600;
 }
 .cart-content2 {
-	font-size: 14px;
+  font-size: 14px;
 }
 .cart-box-body-info-2 {
-	display: flex;
-	margin-left: auto;
-	align-items: center;
-	justify-content: center;
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+  justify-content: center;
 }
 .cart-box-body-price {
-	margin-left: 20px;
+  margin-left: 20px;
 }
 .cart-box-body-number {
-	width: 60px;
-	height: 22px;
-	border: 2px solid rgb(55, 55, 55);
-	border-radius: 10px;
-	justify-content: center;
-	align-items: center;
-	display: flex;
+  width: 60px;
+  height: 22px;
+  border: 2px solid rgb(55, 55, 55);
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 .cart-box-body-option-1 {
-	justify-content: center;
-	display: flex;
-	align-items: center;
-	height: 23px;
-	margin-left: 150px;
-	gap: 10px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  height: 23px;
+  margin-left: 150px;
+  gap: 10px;
 }
 
 .cart-box-bottom {
-	margin-top: 15px;
-	justify-content: end;
-	display: flex;
-	margin-right: 20px;
-	width: auto;
+  margin-top: 15px;
+  justify-content: end;
+  display: flex;
+  margin-right: 20px;
+  width: auto;
 }
 .cart-box-bottom button {
-	border-radius: 10px;
-	background-color: rgb(248, 168, 89);
-	cursor: pointer;
-	font-size: 14px;
-	height: 37px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: white;
-	border: 1px rgb(244, 177, 33);
-	width: 140px !important;
+  border-radius: 10px;
+  background-color: rgb(248, 168, 89);
+  cursor: pointer;
+  font-size: 14px;
+  height: 37px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border: 1px rgb(244, 177, 33);
+  width: 140px !important;
 }
 .cart-box-bottom button:hover {
-	background-color: rgb(55, 55, 55);
-	color: white;
+  background-color: rgb(55, 55, 55);
+  color: white;
 }
