--- a/src/components/Calendar/SearchBar.css
+++ b/src/components/Calendar/SearchBar.css
@@ -10,6 +10,7 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
+	border-radius: 10px;
 }
 
 .btn-search-calendar input {
@@ -42,6 +43,7 @@
 	width: 320px;
 	z-index: 9999;
 	background-color: #f6f6f6;
+	border-radius: 10px;
 }
 
 .autocomplete li {
@@ -56,4 +58,5 @@
 
 .isactive {
 	background-color: #ccc;
+	font-weight: bold;
 }
