--- a/src/layouts/Business/Hiring.css
+++ b/src/layouts/Business/Hiring.css
@@ -1,131 +1,134 @@
 .about-business-hiring {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.55);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9999;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.55);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 9999;
 }
 
 .about-business-hiring-container {
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 20px;
-  padding: 0 20px;
+	background-color: white;
+	border-radius: 10px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border-radius: 20px;
+	padding: 0 20px;
+	height: 400px;
+	font-size: 1.4rem;
+	width: 700px;
 }
 
 .hiring-container-heading {
-  width: 100%;
+	width: 100%;
 }
 .hiring-circles {
-  width: 70px;
-  height: 70px;
-  border: 1px solid rgb(193, 190, 190);
-  border-radius: 100%;
+	width: 70px;
+	height: 70px;
+	border: 1px solid rgb(193, 190, 190);
+	border-radius: 100%;
 }
 .hiring-heading-1 {
-  margin: 20px 20px 10px 20px;
-  color: rgb(244, 177, 33);
-  font-weight: 700;
+	margin: 20px 20px 10px 20px;
+	color: rgb(244, 177, 33);
+	font-weight: 700;
 }
 .hiring-heading-2 {
-  display: flex;
-  width: 250px;
-  line-height: 1.4;
-  margin-left: 10px;
-  align-items: center;
+	display: flex;
+	width: 250px;
+	line-height: 1.4;
+	margin-left: 10px;
+	align-items: center;
 }
 .hiring-container-body {
-  width: 100%;
+	width: 100%;
 }
 .hiring-heading-info {
-  margin-left: 10px;
+	margin-left: 10px;
 }
 .hiring-container-bottom {
-  width: 600px;
+	width: 600px;
 }
 .hiring-body-info {
-  height: 80px;
-  width: 650px;
-  border-radius: 10px;
-  border: 1px solid gray;
-  margin: 10px;
-  resize: none;
+	height: 80px;
+	width: 650px;
+	border-radius: 10px;
+	border: 1px solid gray;
+	margin: 10px;
+	resize: none;
 }
 .hiring-body-info:hover {
-  border: 1px solid gray;
+	border: 1px solid gray;
 }
 
 .hiring-bottom-info-1 {
-  display: flex;
+	display: flex;
 }
 .hiring-bottom-info-2 {
-  width: 220px;
-  height: 30px;
-  border: 1px solid;
-  border-radius: 5px;
-  margin-left: 10px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  padding: 2px;
+	width: 220px;
+	height: 30px;
+	border: 1px solid;
+	border-radius: 5px;
+	margin-left: 10px;
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	padding: 2px;
 }
 .hiring-bottom-info-3 button {
-  margin-top: 0;
-  margin-left: 10px;
-  border-radius: 5px;
-  border: 1px solid;
-  background-color: white;
-  cursor: pointer;
-  height: 30px;
-  width: auto;
-  font-size: 14px;
-  font-weight: 600;
-  padding: 6px;
+	margin-top: 0;
+	margin-left: 10px;
+	border-radius: 5px;
+	border: 1px solid;
+	background-color: white;
+	cursor: pointer;
+	height: 30px;
+	width: auto;
+	font-size: 14px;
+	font-weight: 600;
+	padding: 6px;
 }
 .hiring-bottom-info-3 button:hover {
-  background-color: black;
-  color: white;
+	background-color: black;
+	color: white;
 }
 .hiring-bottom-info-2-option {
-  margin-left: 2px;
-  font-size: 11px;
-  display: flex;
+	margin-left: 2px;
+	font-size: 11px;
+	display: flex;
 }
 .hiring-bottom-info-4 {
-  justify-content: end;
-  display: flex;
-  margin-right: 20px;
+	justify-content: end;
+	display: flex;
+	margin-right: 20px;
 }
 .hiring-bottom-info-4 button {
-  border-radius: 8px;
-  background-color: rgb(244, 177, 33);
-  cursor: pointer;
-  font-size: 0.8em;
-  width: 100px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  border: 1px rgb(244, 177, 33);
-  margin-bottom: 16px;
+	border-radius: 8px;
+	background-color: rgb(244, 177, 33);
+	cursor: pointer;
+	font-size: 0.8em;
+	width: 100px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	border: 1px rgb(244, 177, 33);
+	margin-bottom: 16px;
 }
 .hiring-bottom-info-4 button:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid black;
+	background-color: white;
+	color: black;
+	border: 1px solid black;
 }
 .hiring-option2 {
-  font-size: 1.2em;
-  font-weight: 600;
-  margin-left: 5px;
+	font-size: 1.2em;
+	font-weight: 600;
+	margin-left: 5px;
 }
 .hiring-body-info {
-  padding: 10px;
+	padding: 10px;
 }
