--- a/src/layouts/Business/Hiring.css
+++ b/src/layouts/Business/Hiring.css
@@ -32,15 +32,14 @@
 	border-radius: 100%;
 }
 .hiring-heading-1 {
-	margin: 20px 20px 10px 20px;
-	color: rgb(244, 177, 33);
+	margin: 20px 20px 10px 0;
+	color: #f8a859;
 	font-weight: 700;
 }
 .hiring-heading-2 {
 	display: flex;
 	width: 250px;
 	line-height: 1.4;
-	margin-left: 10px;
 	align-items: center;
 }
 .hiring-container-body {
@@ -53,12 +52,14 @@
 	width: 600px;
 }
 .hiring-body-info {
-	height: 80px;
+	height: 130px;
 	width: 650px;
 	border-radius: 10px;
 	border: 1px solid gray;
-	margin: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	resize: none;
+	font-size: 1rem;
 }
 .hiring-body-info:hover {
 	border: 1px solid gray;
@@ -72,57 +73,59 @@
 	height: 30px;
 	border: 1px solid;
 	border-radius: 5px;
-	margin-left: 10px;
 	justify-content: center;
 	align-items: center;
 	display: flex;
 	padding: 2px;
 }
-.hiring-bottom-info-3 button {
+.hiring-bottom-info-3 {
 	margin-top: 0;
 	margin-left: 10px;
 	border-radius: 5px;
 	border: 1px solid;
 	background-color: white;
+	display: flex;
+	align-items: center;
 	cursor: pointer;
 	height: 30px;
 	width: auto;
 	font-size: 14px;
-	font-weight: 600;
 	padding: 6px;
+	font-weight: 600;
 }
-.hiring-bottom-info-3 button:hover {
-	background-color: black;
-	color: white;
+.hiring-bottom-info-3 label {
+	display: flex;
+	align-items: center;
+	cursor: pointer;
 }
 .hiring-bottom-info-2-option {
 	margin-left: 2px;
 	font-size: 11px;
 	display: flex;
+	align-items: center;
 }
 .hiring-bottom-info-4 {
 	justify-content: end;
 	display: flex;
-	margin-right: 20px;
 }
 .hiring-bottom-info-4 button {
-	border-radius: 8px;
-	background-color: rgb(244, 177, 33);
+	border-radius: 16px;
+	background-color: #f8a859;
 	cursor: pointer;
-	font-size: 0.8em;
-	width: 100px;
+	font-size: 1.2rem;
+	width: 140px;
 	height: 40px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	color: white;
+	font-weight: bold;
 	border: 1px rgb(244, 177, 33);
-	margin-bottom: 16px;
+	margin-top: 20px;
 }
 .hiring-bottom-info-4 button:hover {
-	background-color: white;
-	color: black;
-	border: 1px solid black;
+	background-color: black;
+	color: white;
 }
 .hiring-option2 {
 	font-size: 1.2em;
@@ -131,4 +134,8 @@
 }
 .hiring-body-info {
 	padding: 10px;
+}
+
+#hiring-document {
+	display: none;
 }
