--- a/src/components/Calendar/CreatePlan.css
+++ b/src/components/Calendar/CreatePlan.css
@@ -145,14 +145,18 @@
 
 .date-detail-create-plan-box {
 	width: 100%;
-	padding-left: 18px;
 	height: 100%;
 	position: relative;
-	gap: 20px;
+	gap: 10px;
 	display: flex;
 	flex-direction: column;
 }
-
+.date-picker-box {
+	display: flex;
+	align-items: center;
+	margin-top: 10px;
+	gap: 20px;
+}
 .calendar-picker-cover {
 	cursor: pointer;
 	position: fixed;
@@ -161,11 +165,15 @@
 	left: 0;
 	bottom: 0;
 }
-
+.calendar-date-picker__container {
+	display: flex;
+	gap: 20px;
+	align-items: center;
+}
 .date-detail-create-plan-container {
 	background-color: #f0f0f0;
 	width: 300px;
-	height: 50px;
+	height: 55px;
 	font-size: 1.2rem;
 	display: flex;
 	justify-content: center;
@@ -186,7 +194,7 @@
 }
 .calendar-for-pickerDate {
 	position: absolute;
-	top: 0;
+	top: 20px;
 	left: 0;
 	width: 380px;
 	height: 340px;
