--- a/src/components/Calendar/ShowPlan.css
+++ b/src/components/Calendar/ShowPlan.css
@@ -77,7 +77,7 @@
 .time-show-plan-box {
 	display: flex;
 	gap: 20px;
-	margin-top: 10px;
+	margin-top: 20px;
 	align-items: center;
 }
 
@@ -88,6 +88,11 @@
 	margin-left: 40px;
 }
 
-.tag-type-create-plan-box-4 {
-	margin-left: 40px;
+.tag-type-show-plan-box-4 {
+	display: flex;
+	gap: 10px;
+	width: 400px;
+	overflow-y: scroll;
+	flex-wrap: wrap;
+	height: 70px;
 }
