complete show-create tag

--- a/src/components/Calendar/Partner.css
+++ b/src/components/Calendar/Partner.css
@@ -1,7 +1,5 @@
 .go-together-create-plan-container {
-	margin-top: 20px;
 	display: flex;
-	margin-left: 40px;
 	margin: 20px 0 20px 40px;
 	align-items: center;
 	width: fit-content;
@@ -12,6 +10,7 @@
 	align-items: center;
 	display: flex;
 	gap: 20px;
+	position: relative;
 }
 
 .go-together-create-plan-box {
@@ -25,7 +24,7 @@
 	overflow-y: scroll;
 	gap: 10px;
 	cursor: pointer;
-	height: 70px;
+	height: 75px;
 }
 
 .more-partner-showing {
@@ -39,15 +38,14 @@
 	overflow-y: scroll;
 	gap: 10px;
 	cursor: pointer;
-	height: 100px;
 }
 
 .go-together-create-plan-box::-webkit-scrollbar {
-	display: none;
+	width: 10px;
 }
 
 .show-more-partner {
-	margin-left: 380px;
+	margin-left: 340px;
 	margin-top: 10px;
 }
 
