--- a/src/pages/CalendarPages.css
+++ b/src/pages/CalendarPages.css
@@ -1,5 +1,4 @@
 .calendar-page {
-  display: grid;
-  grid-template-columns: 300px 2100px;
-  overflow: hidden;
+	display: flex;
+	flex-direction: column;
 }
