--- a/src/layouts/Calendar/WeekLayout.css
+++ b/src/layouts/Calendar/WeekLayout.css
@@ -1,15 +1,13 @@
 .week-layout-container {
-	border-radius: 40px;
-	margin-top: 20px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-	width: 900px;
-	height: 930px;
-	overflow: auto;
-	margin-bottom: 20px;
+	width: 945px;
+	height: 800px;
+	overflow-y: scroll;
 	display: flex;
 	position: relative;
-	background-color: #f6f6f6;
-	overflow-x: auto;
+	background-color: white;
+	border: 2px solid #ccc;
+	border-radius: 10px;
 }
 
 .time-week__layout-container {
@@ -23,21 +21,35 @@
 
 .week-layout-edit {
 	display: flex;
+	height: fit-content;
 }
 
 .week-layout-edit-timeColumn {
-	padding: 10px 10px 10px 0px;
 	font-size: 1.2rem;
+	background-color: #f6f6f6;
 	height: fit-content;
+}
+
+.week-layout-edit-time_sticky {
+	position: sticky;
+	height: 40px;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	padding: 6px 0 10px 10px;
+	background-color: #373737;
+	border-right: 1px solid #ccc;
+	width: 60px;
 }
 
 .week-layout-edit-timeOption {
 	position: sticky;
 	left: 0;
-	z-index: 9999;
-	height: 200px;
-	padding: 6px 0 10px 10px;
-	background-color: #f6f6f6;
+	z-index: 9998;
+	height: 120px;
+	padding: 4px 6px 10px 10px;
+	background-color: white;
+	border-right: 2px solid #ccc;
 }
 
 .plan-time-week__layout-container {
@@ -45,44 +57,62 @@
 	flex-wrap: wrap;
 	max-width: 1000px;
 }
+
 .day-week__layout-container {
 	display: flex;
 	position: sticky;
 	top: 0;
 	background-color: #f6f6f6;
-	border-bottom: 1px solid #ccc;
+	z-index: 9998;
 }
+
 .item-day-week__layout-container {
-	width: calc(1000px / 7);
-	height: 60px;
+	width: calc(870px / 7);
+	height: 40px;
 	display: flex;
 	align-items: center;
 	font-size: 1.2rem;
-	border-right: 1px solid #ccc;
-
+	border-right: 2px solid #ccc;
+	color: #f6f6f6;
+	background-color: #373737;
 	justify-content: center;
 }
+
 .plan-week__layout-container {
 	display: flex;
 	max-width: 1000px;
 	flex-wrap: wrap;
 }
+
 .item-plan-week__layout-container {
 	display: flex;
-	width: calc(1000px / 7);
-	height: 200px;
+	width: calc(870px / 7);
+	height: 30px;
 	border: 1px solid #ccc;
 	border-left: none;
 	border-bottom: none;
 }
+
 .specific-plan-week__container {
 	border: 1px solid #ccc;
 	border-left: none;
-	width: calc(1000px / 7);
+	width: calc(870px / 7);
 	display: flex;
 	flex-direction: column;
-	padding: 10px;
-	height: 200px;
+	padding-top: 4px;
+	padding-left: 4px;
+	height: 30px;
+	cursor: pointer;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.content-specific-plan-week__container {
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+	color: #f6f6f6;
+	font-weight: 400;
 }
 
 .avatar-plan-week__container {
@@ -90,29 +120,8 @@
 	margin-left: auto;
 }
 
-.box-specific-plan-week__container {
-	display: flex;
-	flex-direction: column;
-	padding: 8px 8px 10px 8px;
-	height: 100%;
-	background-color: #f6f6f6;
-	border-radius: 10px;
-	box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
-		rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-}
 .box-specific-plan-week__container:hover {
 	transform: scale(1.2);
-}
-.tag-specific-plan-week__container {
-	height: 6px;
-	width: 100%;
-	border-radius: 20px;
-}
-
-.title-specific-plan-week__container {
-	margin-top: 10px;
-	line-height: 1.4;
-	font-size: 0.9rem;
 }
 
 .heading-specific-plan-week__container {
@@ -126,9 +135,25 @@
 
 .padding-plan-week__container {
 	display: flex;
-	width: calc(1000px / 7);
-	height: 200px;
+	width: calc(870px / 7);
+	height: 30px;
 	border-left: none;
 	border-bottom: none;
 	background-color: #e8e6e6;
+}
+
+.hour-box-plan-week__layout {
+	width: 100%;
+	height: 100%;
+	color: #f6f6f6;
+	z-index: 1;
+}
+
+.box-plan-week__layout {
+	display: flex;
+	width: calc(870px / 7);
+	height: 120px;
+	border: 1px solid #ccc;
+	border-left: none;
+	border-bottom: none;
 }
